# raisume

./: .gitignore  README.md  Technical_Spec.md  pyproject.toml
config/: profile.json
src/: __init__.py  cli.py  llm.py  matcher.py  models.py  parser.py  tailorer.py
templates/: cover_letter_master.tex  resume_master.tex
tests/: conftest.py  test_matcher.py  test_parser.py  test_tailorer.py
